fix: spacing on features page

--- a/client/src/pages/FeaturesPage/FeaturesInfoSections/FeatureInfo.module.css
+++ b/client/src/pages/FeaturesPage/FeaturesInfoSections/FeatureInfo.module.css
@@ -26,7 +26,7 @@
 
 .sectionRight p {
   text-align: center;
-  margin-bottom: 5%;
+  margin-bottom: 10%;
   font-weight: 200;
   color: #3b3835;
   font-size: 18px;
@@ -36,6 +36,7 @@
   color: #3b3835;
   font-weight: 500;
   font-size: 32px;
+  margin-top: 10%;
 }
 
 .feat1_3Image {
