--- a/client/src/pages/FeaturesPage/FeaturesInfoSections/FeatureInfo2.module.css
+++ b/client/src/pages/FeaturesPage/FeaturesInfoSections/FeatureInfo2.module.css
@@ -17,7 +17,7 @@
 
 .featureOuter p {
   text-align: center;
-  margin-bottom: 5%;
+  margin-bottom: 10%;
   font-weight: 200;
   color: #3b3835;
   font-size: 18px;
@@ -28,6 +28,7 @@
   font-weight: 500;
   font-size: 32px;
   justify-self: end;
+  margin-top: 10%;
 }
 
 .featureOuter button a {
